# ESP32-Cam-Vision

./: .gitignore  CMakeLists.txt  README.md  license
_knot_mac/: config.json
main/: CMakeLists.txt  kconfig.projbuild  main.c  main.c.knot  partitions.csv
main/camera/: camera.c  camera.c.knot  camera.h
main/httpserver/: fileshandler.c.knot  httpserver.c  httpserver.c.knot  httpserver.h
main/spiffs/: index.html
main/spiffs/src/: entryDeferred.js  style.css
main/utility/: utility.cpp  utility.cpp.knot  utility.h
main/wifi/: wifi.c  wifi.c.knot  wifi.h
